--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,20 @@ ul {
   background-color: var(--accent-bg-color);
 }
 
+.negative-margin {
+  display: flex;
+  margin-top: -30px;
+  margin-left: -30px;
+}
+
+.features .item,
+.work .item,
+.project .item,
+.clients .item {
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -63,17 +77,7 @@ ul {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
-.negative-margin {
-  display: flex;
-  margin-top: -30px;
-  margin-left: -30px;
-}
-/* ========================================= HEADER ======================================  */
-
-.page-header {
-  border-bottom: 1px solid var(--header-line);
-}
+/* ================= COMPONENT ============= */
 
 .container {
   width: 1200px;
@@ -83,9 +87,37 @@ ul {
   margin-right: auto;
 }
 
-.main-nav {
+.button {
   display: flex;
-  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 10px 32px;
+  border-color: transparent;
+  background-color: var(--accent-text-color);
+  color: var(--white-color);
+  min-width: 200px;
+  height: 50px;
+  cursor: pointer;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  transition: background-color var(--timing) var(--timing-function);
+}
+
+.button:hover,
+.button:focus {
+  background-color: var(--hero-btn-hover-bgcolor);
+}
+
+/* ========================================= HEADER ======================================  */
+
+.page-header {
+  border-bottom: 1px solid var(--header-line);
 }
 
 /* ======================== LOGO =========================== */
@@ -102,6 +134,11 @@ ul {
 /* ======================= END LOGO ========================= */
 
 /* ======================= NAVIGATION ======================= */
+
+.main-nav {
+  display: flex;
+  align-items: center;
+}
 
 .nav {
   display: flex;
@@ -249,7 +286,7 @@ ul {
   background-size: cover;
   border: 1px solid #000000;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  text-align: center;
+  /* text-align: center; */
 }
 
 .hero-title {
@@ -263,31 +300,9 @@ ul {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  text-align: center;
 }
 
-.hero-button {
-  padding: 10px 32px;
-  border-color: transparent;
-  background-color: var(--accent-text-color);
-  color: var(--white-color);
-  min-width: 200px;
-  height: 50px;
-  cursor: pointer;
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-
-  transition: background-color var(--timing) var(--timing-function);
-}
-
-.hero-button:hover,
-.hero-button:focus {
-  background-color: var(--hero-btn-hover-bgcolor);
-}
 /* =================== MODAL ================= */
 
 .backdrop {
@@ -487,25 +502,11 @@ ul {
   color: var(--accent-text-color);
 }
 
-.modal-button {
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-}
-
 /* ========== END MODAL ================= */
 
 /*  ====================================== END HERO ====================================== */
 
 /* ====================================== FEATURES ====================================== */
-
-.features .item,
-.work .item,
-.project .item,
-.clients .item {
-  margin-left: 30px;
-  margin-top: 30px;
-}
 
 .features-title {
   margin-bottom: 10px;
@@ -740,6 +741,7 @@ ul {
   padding: 15px;
   width: 358px;
   height: 50px;
+  margin-right: 12px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -751,13 +753,6 @@ ul {
 
 .subscription-form-input::placeholder {
   color: rgba(255, 255, 255, 0.6);
-}
-
-.subscription-button {
-  display: inline-flex;
-  padding: 10px 26px;
-  margin-left: 12px;
-  align-items: center;
 }
 
 .subscription-button-icon {
