--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,23 +1,23 @@
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
-}
 
-.section-title {
-  margin-bottom: 50px;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-}
+  &__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+  }
 
-.section:nth-child(2) {
-  padding-bottom: 47px;
-}
+  &:nth-child(2) {
+    padding-bottom: 47px;
+  }
 
-.section:nth-child(3) {
-  padding-top: 47px;
-}
+  &:nth-child(3) {
+    padding-top: 47px;
+  }
 
-.section:nth-child(4) {
-  background-color: var(--secondary-bg-color);
+  &:nth-child(4) {
+    background-color: var(--secondary-bg-color);
+  }
 }
