--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -18,9 +18,9 @@
   border-radius: 4px;
 
   transition: background-color var(--timing) var(--timing-function);
-}
 
-.button:hover,
-.button:focus {
-  background-color: var(--hero-btn-hover-bgcolor);
+  &:hover,
+  &:focus {
+    background-color: var(--hero-btn-hover-bgcolor);
+  }
 }
