--- a/sass/components/_current-page.scss
+++ b/sass/components/_current-page.scss
@@ -1,11 +1,15 @@
-.current::after {
-  display: block;
-  content: '';
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-text-color);
+.current {
+  color: var(--accent-text-color);
 
-  position: absolute;
-  bottom: -1px;
+  &::after {
+    display: block;
+    content: '';
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-text-color);
+
+    position: absolute;
+    bottom: -1px;
+  }
 }
