--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,33 +1,26 @@
-.main-nav {
+.nav-list {
   display: flex;
-  align-items: center;
-}
 
-.nav {
-  display: flex;
-  margin-left: 93px;
-}
+  &__item + &__item {
+    margin-left: 50px;
+  }
 
-.nav .item + .item {
-  margin-left: 50px;
-}
+  &__link {
+    position: relative;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    color: var(--secondary-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 
-.nav .nav-link {
-  position: relative;
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: var(--secondary-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+    transition: color var(--timing) var(--timing-function);
 
-  transition: color var(--timing) var(--timing-function);
-}
-
-.nav .nav-link:hover,
-.nav .nav-link:focus,
-.nav .nav-link.current {
-  color: var(--accent-text-color);
+    &:hover,
+    &:focus {
+      color: var(--accent-text-color);
+    }
+  }
 }
