--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -14,19 +14,18 @@
   background-size: cover;
   border: 1px solid #000000;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  /* text-align: center; */
-}
 
-.hero-title {
-  margin-top: 0;
-  margin-bottom: 30px;
-  padding-left: 452px;
-  padding-right: 452px;
-  color: var(--white-color);
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  text-align: center;
+  &__title {
+    margin-top: 0;
+    margin-bottom: 30px;
+    padding-left: 452px;
+    padding-right: 452px;
+    color: var(--white-color);
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    text-align: center;
+  }
 }
